--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -31,7 +31,7 @@
       <div class="section basic-info-section">
         <h3>Basic Information</h3>
         <div class="form-row">
-          <mat-form-field appearance="outline" class="full-width">
+          <mat-form-field class="full-width">
             <mat-label>Column Name</mat-label>
             <input matInput formControlName="label" placeholder="My Custom Column" />
             <mat-icon matSuffix>label</mat-icon>
@@ -40,15 +40,12 @@
             }
           </mat-form-field>
 
-          <mat-form-field appearance="outline" class="full-width">
+          <mat-form-field>
             <mat-label>Icon</mat-label>
             <mat-select formControlName="icon">
               @for (icon of data.icons; track icon) {
               <mat-option [value]="icon">
-                <div class="icon-option">
-                  <mat-icon>{{ icon }}</mat-icon>
-                  <span>{{ icon }}</span>
-                </div>
+                <mat-icon>{{ icon }}</mat-icon>
               </mat-option>
               }
             </mat-select>
