feat: update relay option terminology and remove discovery relays from selection

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -118,17 +118,8 @@
               <div class="relay-option">
                 <mat-icon>person</mat-icon>
                 <div>
-                  <div class="option-title">User Relays</div>
+                  <div class="option-title">Account Relays</div>
                   <div class="option-description">Use your configured relays</div>
-                </div>
-              </div>
-            </mat-option>
-            <mat-option value="discovery">
-              <div class="relay-option">
-                <mat-icon>explore</mat-icon>
-                <div>
-                  <div class="option-title">Discovery Relays</div>
-                  <div class="option-description">Use discovery and search relays</div>
                 </div>
               </div>
             </mat-option>
