--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -67,3 +67,21 @@ button.only-icon {
     line-height: 21px;
   }
 }
+
+.following-event {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 16px 0;
+  color: var(--mat-sys-on-surface-variant);
+
+  mat-icon {
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+  }
+
+  span {
+    font-size: 14px;
+  }
+}
