--- a/src/app/components/event-types/video-event.component.scss
+++ b/src/app/components/event-types/video-event.component.scss
@@ -30,8 +30,8 @@
   max-width: 100%;
   border-radius: 12px;
   overflow: hidden;
-  background: var(--mat-app-surface-variant);
-  box-shadow: var(--mat-sys-level1);
+  // background: var(--mat-app-surface-variant);
+  // box-shadow: var(--mat-sys-level1);
   margin: 1rem 0rem;
 
   .video-thumbnail-container {
