feat: update relay configuration terminology from 'user' to 'account' in new column dialog

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -115,7 +115,7 @@
         <div class="form-group">
           <mat-button-toggle-group name="relayConfig" formControlName="relayConfig" class="relay-toggle"
             (change)="onRelayConfigChange($event.value)">
-            <mat-button-toggle value="user">
+            <mat-button-toggle value="account">
               <mat-icon>person</mat-icon>
               Account Relays
             </mat-button-toggle>
