feat: add new contributor Serregan to credits section

--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -73,6 +73,10 @@
             <mat-icon>person</mat-icon>
             Nikita Korikov
           </mat-list-item>
+          <mat-list-item>
+            <mat-icon>person</mat-icon>
+            Serregan
+          </mat-list-item>
         </mat-list>
         <p>
           Thank you for believing in our vision of making the Nostr protocol accessible to everyone
